fix: z-index of buy me a coffe is now ok

--- a/public/styles.css
+++ b/public/styles.css
@@ -1788,6 +1788,10 @@ select {
   z-index: -10;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
